--- a/example/src/pages/index.astro
+++ b/example/src/pages/index.astro
@@ -37,9 +37,9 @@ import sunRiseSVG from "lucide-static/icons/sunrise.svg?raw";
 <Svg raw={sunRiseSVG} class="sun-rise" stroke-width={1.5} />
     `}
       />
-      <a href="https://github.com/cxa/astro-inline-svg"
-        ><Svg raw={githubSVG} stroke-width={2} /></a
-      >
+      <a href="https://github.com/cxa/astro-inline-svg">
+        <Svg raw={githubSVG} stroke-width={2} />
+      </a>
     </main>
   </body>
 </html>
