--- a/example/src/pages/index.astro
+++ b/example/src/pages/index.astro
@@ -139,54 +139,55 @@ import sunRiseSVG from "lucide-static/icons/sunrise.svg?raw";
         <Svg raw={githubSVG} stroke-width={2} />
       </a>
     </main>
+    <script async src="https://cdn.seline.so/seline.js"></script>
   </body>
-
-  <style>
-    html {
-      background: #fff;
-      color: #000;
-    }
-
-    body {
-      min-height: 100dvh;
-      display: grid;
-      place-items: center;
-      padding: env(safe-area-inste-top) env(safe-area-inste-right)
-        env(safe-area-inste-bottom) env(safe-area-inste-left);
-      font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
-        sans-serif;
-    }
-
-    main {
-      max-width: 800px;
-      padding: 20px;
-      display: flex;
-      gap: 20px;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    section {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    h1 {
-      font-size: 20px;
-    }
-
-    h2 {
-      font-size: 18px;
-    }
-
-    pre {
-      padding: 0 20px;
-    }
-
-    .sun-rise {
-      width: 120px;
-      height: 120px;
-    }
-  </style>
 </html>
+
+<style>
+  html {
+    background: #fff;
+    color: #000;
+  }
+
+  body {
+    min-height: 100dvh;
+    display: grid;
+    place-items: center;
+    padding: env(safe-area-inste-top) env(safe-area-inste-right)
+      env(safe-area-inste-bottom) env(safe-area-inste-left);
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+      sans-serif;
+  }
+
+  main {
+    max-width: 800px;
+    padding: 20px;
+    display: flex;
+    gap: 20px;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  h1 {
+    font-size: 20px;
+  }
+
+  h2 {
+    font-size: 18px;
+  }
+
+  pre {
+    padding: 0 20px;
+  }
+
+  .sun-rise {
+    width: 120px;
+    height: 120px;
+  }
+</style>
