proj: update deps

--- a/example/src/pages/index.astro
+++ b/example/src/pages/index.astro
@@ -1,10 +1,9 @@
 ---
-import Svg from "@cxa/astro-inline-svg";
 import { Code } from "astro:components";
+import Svg from '@cxa/astro-inline-svg'
 import sunRiseSVG from "lucide-static/icons/sunrise.svg?raw";
 import birdSVG from "lucide-static/icons/bird.svg?raw";
 import githubSVG from "lucide-static/icons/github.svg?raw";
-import type { symbol } from "astro/zod";
 ---
 
 <html lang="en">
